findingRecipeByName() in RecipeController.class fixed - search successfully with a partial word